tests/v0-fail/unordered.out
Running <root>/unordered.cli ...

printf "a\nb\n"
---
a
b
---
ERROR: unordered { ... } at line <root>/unordered.cli:4 does not match output
[XX] missed sequence { ... }
  [XX] missed unordered { ... }
    [OK] matched "a"
    [OK] matched "b"
    [XX] missed "c" != <eof>

❌ FAIL

<root>/unordered.cli FAILED
Error: unordered { ... } at line <root>/unordered.cli:4 does not match output

